# small

./: README.md  package-lock.json  package.json
backend/: .gitignore  Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  post.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20230309_144142_create_user_table.rs  m20230309_144155_create_posts_table.rs
backend/src/: lib.rs  main.rs
backend/src/handlers/: mod.rs
src/: app.d.ts
src/lib/: Navbar.svelte  PostFeed.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/create/: +page.svelte
src/routes/dashboard/: +page.svelte  +page.ts
src/routes/login/: +page.svelte
src/routes/post/view/[slug]/: +page.svelte  +page.ts
src/routes/signup/: +page.svelte
