[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
actix-web = "4.3.1"
sea-orm = { version = "0.11.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
