[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
actix-web = { version = "4.3.1", features = [ "cookie" ]}
sea-orm = { version = "0.11.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
serde = { version = "1.0.154", features = [ "derive" ] }
serde_json = "1.0.94"
dotenv = "0.15.0"
bcrypt = "0.14.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
